# importar-pedidos

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  INSTALACAO-SERVIDOR.md  MANUAL_INSTALACAO.html  PRD.md  README.md  atualizar.bat  configurar-integracao.bat  desinstalar.bat  docker-compose.override.yml  docker-compose.yml  iniciar.bat  instalar.bat  main.py  pyproject.toml  setup-service.bat  sincronizar-catalogo.bat  ui.py
.github/workflows/: ci.yml
app/: config.py  firebird_config.py  pipeline.py
app/classifiers/: format_classifier.py
app/erp/: __init__.py  catalog_extract.py  cliente_extract.py  cnpj.py  connection.py  exceptions.py  fire_update.py  mapper.py  product_check.py  queries.py
app/exporters/: erp_exporter.py  firebird_exporter.py
app/extractors/: pdf_extractor.py  xls_extractor.py
app/http/: __init__.py  client.py  policies.py
app/ingestion/: file_loader.py
app/llm/: fallback_parser.py  openrouter_client.py
app/models/: order.py
app/normalizers/: order_normalizer.py
app/observability/: metrics.py  trace.py
app/parsers/: authentic_feet_parser.py  base_parser.py  beira_rio_parser.py  desmembramento_xls_parser.py  generic_parser.py  kallan_xls_parser.py  kolosh_parser.py  mercado_eletronico_parser.py  pedido_compras_revenda_parser.py  sams_club_parser.py  sbf_centauro_parser.py
app/persistence/: catalogo_fire_repo.py  clientes_fire_repo.py  context.py  db.py  environments_repo.py  flowpcp_repo.py  idempotency_repo.py  invites_repo.py  outbox_repo.py  repo.py  router.py  schema_env.py  schema_shared.py  sessions_repo.py  users_repo.py
app/security/: __init__.py  hmac_verify.py  passwords.py  secret_store.py  secrets.py
app/state/: __init__.py  events.py  machine.py
app/sync/: __init__.py  (+6 more)
samples/: Desmembramento Authentic feet (1).xlsx  Desmembramento Magic Feet.xlsx  PEDIDO KALLAN K01.xlsx  PEDIDO NBA 3.xlsx  Pedido Authentic Fit.xlsx  Pedido Grupo Afeet Pulmao.xlsx  Pedido Magic Feet MF048.xlsx
scripts/: apply-update.ps1  install.ps1  network.ps1  setup-service.ps1  uninstall-service.ps1  uninstall.ps1  update.ps1  watchdog.ps1
tests/: conftest.py  test_admin_ambiente_edit_clientes.py  test_admin_environments_routes.py  test_admin_produtos_sync_routes.py  test_admin_users.py  test_auth_routes.py  test_catalog_extract.py  test_catalogo_fire_repo.py  test_catalogo_sync.py  test_cliente_extract.py  test_clientes_client.py  test_clientes_fire_repo.py  test_clientes_mapper.py  test_clientes_sync.py  test_cnpj.py  test_configurar_flowpcp.py  test_env_select_routes.py  test_environments_repo.py  test_environments_repo_flowpcp.py  test_exporter_split.py  test_firebird_config.py  test_firebird_config_api.py  test_firebird_connection.py  test_firebird_exporter_override.py  test_flowpcp_catalogo_client.py  test_flowpcp_catalogo_mapper.py  test_flowpcp_catalogo_schema.py  test_flowpcp_client.py  test_flowpcp_clientes_config.py  test_flowpcp_config.py  test_flowpcp_exporter.py  test_flowpcp_fire_update.py  test_flowpcp_hook.py  test_flowpcp_mapper_cnpj.py  test_flowpcp_mapper_prazo.py  test_flowpcp_poll.py  test_flowpcp_repo.py  test_flowpcp_schema.py  test_flowpcp_worker_wiring.py  test_generic_parser.py  (+43 more)
tools/: build_package.sh  build_wheelhouse.sh  close_flowpcp_e2e.py  configurar_flowpcp.py  create_user.py  explore_firebird.py  generate_help_pdf.py  generate_install_pdf.py  migrate_log_to_sqlite.py  reprocessar_prazos_flow.py  sync_catalogo_fire.py
(+96 files in other folders)
