[project]
name = "importar-pedidos"
version = "0.1.0"
description = "Automação de pedidos: PDF + XLS → ERP"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.100",
    "uvicorn>=0.24",
    "python-multipart>=0.0.22",
    "pdfplumber>=0.11",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "openai>=1.30",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "requests>=2.33.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "pip-audit>=2.7",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
