[project]
name = "portal-de-pedidos"
version = "0.1.0"
description = "Portal de Pedidos — porta de entrada de pedidos (PDF/XLS) → ERP Fire Sistemas"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.100",
    "uvicorn>=0.24",
    "python-multipart>=0.0.22",
    "pdfplumber>=0.11",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "httpx>=0.27",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "firebird-driver>=2.0",
    "bcrypt>=4.1",
    "cryptography>=42",
    "apscheduler>=3.10,<4.0",
    "sqlalchemy>=2.0",
    "prometheus_client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "pip-audit>=2.7",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
