[project]
name = "portal-de-pedidos"
version = "0.1.0"
description = "Portal de Pedidos — porta de entrada de pedidos (PDF/XLS) → ERP Fire Sistemas"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.100",
    "uvicorn>=0.24",
    "python-multipart>=0.0.22",
    "pdfplumber>=0.11",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "httpx>=0.27",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "fdb>=2.0",
    "bcrypt>=4.1",
    "cryptography>=42",
    "apscheduler>=3.10,<4.0",
    "sqlalchemy>=2.0",
    "prometheus_client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "pip-audit>=2.7",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
ignore = [
    "E501",   # comprimento de linha fica a cargo do formatador (`ruff format`)
    "UP042",  # `(str, Enum)` é intencional; migrar p/ StrEnum muda str() e arrisca serialização/DB
]

[tool.ruff.lint.per-file-ignores]
# Entrypoints/scripts carregam .env / ajustam sys.path antes dos imports (E402 esperado)
"main.py" = ["E402"]
"ui.py" = ["E402"]
"tools/*" = ["E402"]
# N815: campos pydantic em camelCase casam o contrato JSON do front (watchDir/outputDir/exportMode)
# N806: _DUMMY_HASH é constante local em UPPER_CASE
"app/web/server.py" = ["N815", "N806"]
# Constantes locais em UPPER_CASE (intencional)
"app/parsers/desmembramento_xls_parser.py" = ["N806"]
# Exceção de domínio sem sufixo Error; rename é refactor, fora do escopo deste chore
"app/persistence/environments_repo.py" = ["N818"]

[tool.pytest.ini_options]
testpaths = ["tests"]
